--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <article id="privacy" />
 
     <script>
-        fetch('https://6u6mys8jv7.microcms.io/api/v1/wtpolicy',
+        fetch('https://worldclock.microcms.io/api/v1/wtpolicy',
             { headers: { "X-MICROCMS-API-KEY": "LGQNIWRHdh0rol2VlowPtgVlLemKRnrf8one" } })
             .then((res) => {
                 return res.json();
