--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <BODY>
-    <article id="privacy" />
+    <article id="wtpolicy" />
 
     <script>
         fetch('https://worldclock.microcms.io/api/v1/wtpolicy',
