--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <article id="wtpolicy" />
 
     <script>
-        fetch('https://worldclock.microcms.io/api/v1/wtpolicy',
-            { headers: { "X-MICROCMS-API-KEY": "LGQNIWRHdh0rol2VlowPtgVlLemKRnrf8one" } })
+        fetch("https://worldclock.microcms.io/api/v1/wtpolicy",
+            { headers: { "X-MICROCMS-API-KEY: LGQNIWRHdh0rol2VlowPtgVlLemKRnrf8one" } })
             .then((res) => {
                 return res.json();
             })
@@ -16,3 +16,5 @@
             });
     </script>
 </BODY>
+
+
