--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <article id="wtPrivacy" />
 
     <script>
-        fetch('https://worldclock.microcms.io.microcms.io/api/v1/wtPrivacy',
+        fetch('https://worldclock.microcms.io/api/v1/wtPrivacy',
             { headers: { "X-MICROCMS-API-KEY": "LGQNIWRHdh0rol2VlowPtgVlLemKRnrf8one" } })
             .then((res) => {
                 return res.json();
